@@ -246,6 +246,7 @@ SEXP do_inherits(SEXP, SEXP, SEXP, SEXP);
 SEXP do_int_unzip(SEXP, SEXP, SEXP, SEXP);
 SEXP do_interactive(SEXP, SEXP, SEXP, SEXP);
 SEXP do_internal(SEXP, SEXP, SEXP, SEXP);
+SEXP do_intToBits(SEXP, SEXP, SEXP, SEXP);
 SEXP do_invisible(SEXP, SEXP, SEXP, SEXP);
 #ifdef NEW_CONDITION_HANDLING
 SEXP do_invokeRestart(SEXP, SEXP, SEXP, SEXP);
@@ -312,6 +313,8 @@ SEXP do_optim(SEXP, SEXP, SEXP, SEXP);
 SEXP do_optimhess(SEXP, SEXP, SEXP, SEXP);
 SEXP do_options(SEXP, SEXP, SEXP, SEXP);
 SEXP do_order(SEXP, SEXP, SEXP, SEXP);
+SEXP do_pack(SEXP, SEXP, SEXP, SEXP);
+SEXP do_packBits(SEXP, SEXP, SEXP, SEXP);
 SEXP do_palette(SEXP, SEXP, SEXP, SEXP);
 SEXP do_par(SEXP, SEXP, SEXP, SEXP);
 SEXP do_paren(SEXP, SEXP, SEXP, SEXP);
@@ -350,6 +353,8 @@ SEXP do_random2(SEXP, SEXP, SEXP, SEXP);
 SEXP do_random3(SEXP, SEXP, SEXP, SEXP);
 SEXP do_range(SEXP, SEXP, SEXP, SEXP);
 SEXP do_rank(SEXP, SEXP, SEXP, SEXP);
+SEXP do_rawShift(SEXP, SEXP, SEXP, SEXP);
+SEXP do_rawToBits(SEXP, SEXP, SEXP, SEXP);
 SEXP do_rawToChar(SEXP, SEXP, SEXP, SEXP);
 SEXP do_readDCF(SEXP, SEXP, SEXP, SEXP);
 SEXP do_readLines(SEXP, SEXP, SEXP, SEXP);
